--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <main>
         <div class="container">
             <img src="./assest/Chuck.jpg" alt="chuck norris" />
-            <button type="btn" class="btn">make me laugh chuck!</button>
+            <button type="btn" class="btn" id="genquote">make me laugh chuck!</button>
             <p class="content"></p>
         </div>
     </main>
