--- a/index.html
+++ b/index.html
@@ -2,18 +2,31 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
-    <title>random-jokes</title>
+    <link rel="stylesheet" href="styles.css">
+    <title>tic-tac-toe</title>
 </head>
 <body>
-    <main>
-        <div class="container">
-            <img src="./assest/Chuck.jpg" alt="chuck norris" />
-            <button type="btn" class="btn">make me laugh chuck!</button>
-            <p class="content"></p>
-        </div>
-    </main>
+    <div class='flex'>
+        <div class='p1'>Player 1: 0</div>
+        <h1 class='header'>Tic Tac Toe</h1>
+        <div class='p2'>Player 2: 0</div>
+    </div>
+    <div class='grid'>
+        <div class='space' id='one'></div>
+        <div class='space' id='two'></div>
+        <div class='space' id='three'></div>
+        <div class='space' id='four'></div>
+        <div class='space' id='five'></div>
+        <div class='space' id='six'></div>
+        <div class='space' id='seven'></div>
+        <div class='space' id='eight'></div>
+        <div class='space' id='nine'></div>
+    </div> 
+    <div class='wrapper'>
+        <button class='reset'>Reset</button>
+    </div>
     <footer class="footer">
         <div class="footer-container">
             <div class="footer-data">
@@ -24,6 +37,6 @@
             <a class="rss-logo" href="https://rs.school/js-stage0/"></a>
         </div>
     </footer>
-<script src="index.js"></script>
+    <script src="./index.js"></script>
 </body>
 </html>
